Attempt to fix tabs on mobile

--- a/resources/assets/sass/_flow.sass
+++ b/resources/assets/sass/_flow.sass
@@ -410,6 +410,11 @@ body.page-flow
 
 @media all and (max-width: 991px)
 	body.page-flow
+		.tabs
+			.options
+				.tab
+					padding: 14px 8px
+
 		header.header--with-bg
 			z-index: 1
 
